tests/globals/invalid/fun_redefined_as_var.amu
s32 foo() {
    return 3;
}

s32 foo = 4;

s32 main() {
    return foo;
}